# SiliconSchema

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
.gitlab/ci/: sync_to_gerrit.yml
chips/SF32LB52_X/: chip.yaml  series.yaml
chips/SF32LB52x/: chip.yaml  series.yaml
chips/SF32LB56x/: chip.yaml
chips/SF32LB57x/: chip.yaml
chips/SF32LB58x/: chip.yaml
common/: enums.yml
common/mpi/sf32lb52/: mpi.yaml
common/mpi/sf32lb56/: mpi.yaml
common/mpi/sf32lb57/: mpi.yaml
common/mpi/sf32lb58/: mpi.yaml
common/pinmux/sf32lb52/: pinmux.yaml  pinr.yaml
common/pinmux/sf32lb56/: pinmux.yaml  pinr.yaml
common/pinmux/sf32lb57/: pinmux.yaml
common/pinmux/sf32lb58/: pinmux.yaml
common/ram/sf32lb52/: ram.yaml
common/ram/sf32lb56/: ram.yaml
common/ram/sf32lb57/: ram.yaml
common/ram/sf32lb58/: ram.yaml
common/schema/: chip-series.schema.json  mpi-config.schema.json  ram-config.schema.json  sdmmc-config.schema.json
common/sdmmc/sf32lb52/: sdmmc.yaml
common/sdmmc/sf32lb56/: sdmmc.yaml
common/sdmmc/sf32lb57/: sdmmc.yaml
common/sdmmc/sf32lb58/: sdmmc.yaml
docs/: chip_data_model.md
src/silicon_schema/: __init__.py  build.py  validate.py
